@@ -651,6 +651,9 @@ zoniie, and Daniel Hahler for contributing to this release.
 - In a directory search, if you use a regex, it is tested before, before listing
   files (#1556663) Matthieu Casanova
 
+- Bugfixes for Installer related to obsolete JVMs and invalid
+  pathnames. (kerik - # 2327864, 979086, 2327736, 1817421)  
+  
 - Installer for *nix platforms - simplified startup script
     (#2098720 - Bernhard Walle)
 
